fixed massive gap at bottom of service image, will fix nicer when finalising images

--- a/src/scss/layouts/home.scss
+++ b/src/scss/layouts/home.scss
@@ -149,6 +149,7 @@
     .services {
         .image-container {
             flex-grow: 2;
+            max-height: 500px;
         }
 
         .content {
